--- a/audit_app/finance/templates/finance/add-costs.html
+++ b/audit_app/finance/templates/finance/add-costs.html
@@ -16,7 +16,7 @@
 
         <nav class="navbar navbar-expand-xl">
             <div class="container h-100">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="http://127.0.0.1:8000/finance/">
                     <h1 class="tm-site-title mb-0">Finance Audit</h1>
                 </a>
 
